# FMTK

./: .gitignore  Dockerfile  README.md  client.py  pyproject.toml  run_triton.sh  server.py
examples/: README.md  exp1.py  exp2.py  exp3.py  exp4.py  exp5.py
experiments/comparison/: run_exp.py  trace.py
experiments/diff_components/: moment_ppg_mlp.py  run.sh
experiments/diff_decoders/: chronos_ecg.py  moment_ecg.py  papagei.py
experiments/diff_tasks/: chronos_ecg_sdk.py  chronos_etth1_sdk.py  chronos_ppg_baseline.py  chronos_ppg_sdk.py  moment_ecg_baseline.py  moment_ecg_sdk.py  moment_etth1_baseline.py  moment_etth1_sdk.py  moment_ppg_baseline.py  moment_ppg_sdk.py  papagei_ecg_sdk.py  papagei_etth1_sdk.py  papagei_ppg_baseline.py  papagei_ppg_sdk.py
experiments/examples/: chronos_ecgclassify.py  chronos_etth1.py  chronos_ppg.py  dino_cifar10.py  llamavision_vqa.py  llava_vqa.py  minicpm_vqa.py  molmo_vqa.py  moment_adapter_mlpdecoder.py  moment_ecgclassify.py  moment_etth1.py  moment_ppg.py  moment_ppg_mlp.py  moondream_vqa.py  papagei_ecgclassify.py  papagei_etth1.py  papagei_ppg.py  phi_vqa.py  qwen_vqa.py
experiments/overhead/: analyses.py  moment_ecg_baseline.py  moment_ecg_sdk.py  moment_etth1_baseline.py  moment_etth1_sdk.py  run.sh
experiments/plots/: diverse_components.py  diverse_decoder.py  diverse_task.py  memory_utilization.py  overhead.py
experiments/run_all/: A100.csv  A16.csv  combined_metrics.csv  component_loader.py  config.py  dataset_loader.py  inference_pipeline.py  main.py  worker.py
experiments/workload/: server.py
model_repository/fmtk_chronos/: config.pbtxt
tests/: exp1.py  exp2.py
(+193 files in other folders)
