[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmtk"
version = "0.1.0"                
description = "Modular Toolkit for Timeseries Foundation Model"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
"torch", 
"torchvision", 
"torchaudio",
"numpy",
"pandas",
"matplotlib",
"seaborn",
"joblib",
"scipy", 
"scikit-learn", 
"tqdm",
"dotmap",
"vitaldb",
"openpyxl",
"pytorch_metric_learning",
"chronos-forecasting",
"momentfm",
"pynvml",
"peft==0.10.0",
"peakutils",
"torch-ecg<=0.0.28",
]

